--- a/app/src/main/res/drawable/button_radius_little_edge.xml
+++ b/app/src/main/res/drawable/button_radius_little_edge.xml
@@ -5,10 +5,10 @@
     <solid android:color="#FFFFFF"></solid>
     <stroke
         android:width='1dp'
-        android:color="#6E6E6E" />
+        android:color="#6DA2CA" />
     <corners
-        android:bottomLeftRadius="30dp"
-        android:bottomRightRadius="30dp"
-        android:topLeftRadius="30dp"
-        android:topRightRadius="30dp" />
+        android:bottomLeftRadius="10dp"
+        android:bottomRightRadius="10dp"
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp" />
 </shape>
