--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,50 +48,92 @@
                 android:paddingTop="15dp"
                 android:paddingBottom="30dp"
                 app:srcCompat="@drawable/refrigerator" />
+
         </LinearLayout>
 
-        <EditText
-            android:id="@+id/editText_id"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="10dp"
-            android:background="@drawable/edittext_custom"
-            android:elevation="10dp"
-            android:ems="10"
-            android:hint="아이디"
-            android:inputType="textPersonName" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-        <EditText
-            android:id="@+id/editText_pw"
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_marginBottom="20dp"
-            android:background="@drawable/edittext_custom"
-            android:elevation="10dp"
-            android:ems="10"
-            android:hint="비밀번호"
-            android:inputType="textPersonName" />
+            <ImageView
+                android:id="@+id/imageview_id"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="15dp"
+                app:srcCompat="@drawable/main_user" />
+
+            <EditText
+                android:id="@+id/editText_id"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="15dp"
+                android:background="@drawable/edittext_custom"
+                android:elevation="5dp"
+                android:ems="10"
+                android:hint="ID"
+                android:inputType="text"
+                android:paddingLeft="20dp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/imageview_password"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginBottom="40dp"
+                app:srcCompat="@drawable/padlock" />
+
+            <EditText
+                android:id="@+id/editText_pw"
+                android:layout_width="250dp"
+                android:layout_height="50dp"
+                android:layout_marginBottom="40dp"
+                android:background="@drawable/edittext_custom"
+                android:elevation="5dp"
+                android:ems="10"
+                android:fontFamily="sans-serif"
+                android:hint="PW"
+                android:inputType="textPassword"
+                android:paddingLeft="20dp" />
+
+        </LinearLayout>
 
         <Button
             android:id="@+id/btn_login"
-            android:layout_width="169dp"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
+            android:layout_marginBottom="15dp"
             android:background="@drawable/button_radius_whole"
+            android:fontFamily="sans-serif"
+            android:elevation="5dp"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:text="로그인"
+            android:text="Login"
+            android:textAllCaps="false"
             android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/btn_signup"
-            android:layout_width="169dp"
+            style="?android:attr/borderlessButtonStyle"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:background="@drawable/button_radius_edge"
+            android:background="@null"
+            android:fontFamily="sans-serif"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
-            android:text="회원가입"
-            android:textColor="#6DA2CA" />
+            android:text="Sign Up"
+            android:textAllCaps="false"
+            android:textColor="#717171" />
     </LinearLayout>
 
 </LinearLayout>
