--- a/app/src/main/res/layout/activity_mybasket.xml
+++ b/app/src/main/res/layout/activity_mybasket.xml
@@ -27,13 +27,68 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview_mybasket"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout_basket"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_below="@id/basket_toolbar"
-        android:layout_above="@id/basket_bottom_navi_menu"
-    />
+        android:textAllCaps="false"
+        app:tabTextColor="#D8D8D8"
+        app:tabSelectedTextColor="#000000"
+        app:tabTextAppearance="@style/tabTextSizeBold"
+        app:tabIndicatorColor="#000000"
+        app:tabIndicatorHeight="4dp"
+        app:tabIndicatorGravity="bottom"
+        app:tabRippleColor="#000000">
+        <!-- app:tabIndicatorFullWidth="false" -->
+
+        <!--        <com.google.android.material.tabs.TabItem-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="신선재료" />-->
+
+        <!--        <com.google.android.material.tabs.TabItem-->
+        <!--            android:layout_width="wrap_content"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:text="유통기한 만료" />-->
+
+    </com.google.android.material.tabs.TabLayout>
+
+    <!-- Viewpager2 위치에 Fragment 노출 -->
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/viewpager_basket"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tablayout_basket"
+        android:layout_below="@id/tablayout_basket"
+        android:layout_above="@id/basket_bottom_navi_menu"/>
+
+    <TextView
+        android:id="@+id/basket_underline"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_weight="1"
+        android:background="#D8D8D8"
+        android:layout_below="@id/tablayout_basket"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/button_radius_whole"
+        android:textColor="#ffffff"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:gravity="center_horizontal"
+        android:text="추천레시피 보러가기"
+        android:visibility="gone"
+        android:layout_above="@id/basket_bottom_navi_menu"/>
 
     <!-- 하단 네비게이션 바 -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
