--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -28,21 +28,35 @@
     </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingTop="20dp"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/id"
+                android:id="@+id/textView_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
-                android:text="아이디 *" />
+                android:text="아이디"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_id2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -52,93 +66,156 @@
 
             <EditText
                 android:id="@+id/idText"
-                android:layout_width="190dp"
+                android:layout_width="240dp"
+                android:layout_marginRight="10dp"
                 android:layout_height="wrap_content"
-                android:background="#6DA2CA"
-                android:hint="ID"
-                android:padding="10dp"
-                android:textColor="#ffffff"
-                android:textColorHint="#ffffff" />
+                android:hint="아이디 입력"
+                android:textColor="#000000"
+                android:textColorHint="#BCBBBB" />
 
             <Button
                 android:id="@+id/validateButton"
-                android:layout_width="80dp"
+                android:layout_width="100dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:background="#FFFFFF"
-                android:text="Check ID"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="@drawable/button_radius_little_edge"
+                android:text="중복 확인"
                 android:textColor="#6DA2CA"
                 android:textSize="15dp"
                 android:textStyle="bold" />
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/pw"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="비밀번호 *" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_pw"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="비밀번호"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_pw2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/passwordText"
-            android:layout_width="280dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#6DA2CA"
-            android:hint="PASSWORD"
+            android:hint="비밀번호 입력"
             android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColor="#ffffff"
-            android:textColorHint="#ffffff" />
+            android:textColor="#000000"
+            android:textColorHint="#BCBBBB" />
 
-        <TextView
-            android:id="@+id/pw_corr"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="비밀번호 확인 *" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_pw_corr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="비밀번호 확인"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_pw2_corr"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/password_corr"
-            android:layout_width="280dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#6DA2CA"
-            android:hint="PASSWORD"
+            android:hint="비밀번호 입력"
             android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColor="#ffffff"
-            android:textColorHint="#ffffff" />
+            android:textColor="#000000"
+            android:textColorHint="#BCBBBB" />
 
-        <TextView
-            android:id="@+id/username"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="닉네임 *" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_username"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="닉네임"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_username2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/usernameText"
-            android:layout_width="280dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#6DA2CA"
-            android:hint="user name"
+            android:hint="닉네임 입력"
             android:inputType="text"
-            android:padding="10dp"
-            android:textColor="#ffffff"
-            android:textColorHint="#ffffff" />
+            android:textColor="#000000"
+            android:textColorHint="#BCBBBB" />
 
-        <TextView
-            android:id="@+id/gender"
-            android:layout_width="match_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="성별 *" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_gender"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="성별"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_gender2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
+        </LinearLayout>
 
         <RadioGroup
             android:id="@+id/genderGroup"
-            android:layout_width="280dp"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:orientation="horizontal">
@@ -159,16 +236,97 @@
                 android:text="여자" />
         </RadioGroup>
 
-        <Button
-            android:id="@+id/registerButton"
-            android:layout_width="280dp"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_address"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="주소"
+                android:textColor="#6E6E6E"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textView_address2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text=" *"
+                android:textColor="#FB5959"
+                android:textSize="20sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/addressText_first"
+                android:layout_width="240dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="#F1F1F1"
+                android:inputType="text"
+                android:textColor="#000000"/>
+
+            <Button
+                android:id="@+id/address_search_Button"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:background="@drawable/button_radius_little_whole"
+                android:text="주소 검색"
+                android:textColor="#FFFFFF"
+                android:textSize="15dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/addressText_second"
+            android:layout_width="350dp"
+            android:layout_marginRight="10dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:background="#6DA2CA"
-            android:text="회원가입 완료"
-            android:textColor="#ffffff"
-            android:textSize="20dp"
-            android:textStyle="bold" />
+            android:background="#F1F1F1"
+            android:inputType="text"
+            android:textColor="#000000"/>
 
+        <EditText
+            android:id="@+id/addressText_third"
+            android:layout_width="350dp"
+            android:layout_marginRight="10dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:hint="상세 주소"
+            android:background="#FFFFFF"
+            android:inputType="text"
+            android:textColor="#000000"
+            android:textColorHint="#BCBBBB"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:paddingBottom="10dp">
+
+            <Button
+                android:id="@+id/registerButton"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/button_radius_whole"
+                android:text="회원가입 완료"
+                android:textColor="#ffffff"
+                android:textSize="20dp"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
-    </LinearLayout>
+</LinearLayout>
