--- a/app/src/main/res/menu/menu_item_close.xml
+++ b/app/src/main/res/menu/menu_item_close.xml
@@ -2,8 +2,8 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:id="@+id/menu_basket"
-        android:icon="@drawable/basket"
-        android:title="menu_basket"
+    <item android:id="@+id/menu_close"
+        android:icon="@drawable/x"
+        android:title="menu_close"
         app:showAsAction="always"/>
 </menu>
